# ReSTIRGDI

Source/Falcor/: CMakeLists.txt
Source/Falcor/Rendering/RESTIRGDI/: LightUpdater.cs.slang  PolymorphicLight.slang  ReSTIRGDI.cpp  ReSTIRGDI.h  ReSTIRGDI.slang  ReSTIRGDISetup.cs.slang  ReflectTypes.cs.slang  ResamplingFunctions.slang  Reservoir.slang  RestirgdiHelpers.slang  RestirgdiMath.slang  RestirgdiParameters.h  RestirgdiTypes.h
Source/Modules/: CMakeLists.txt
Source/Modules/ReSTIRGDI/: CMakeLists.txt  EvalContext.slang  EvaluateFinalSamples.cs.slang  FinalSample.slang  GenerateLightTiles.cs.slang  InitialResampling.cs.slang  Lights.slang  LoadShadingData.slang  ReSTIRGDI.cpp  ReSTIRGDI.h  ReSTIRGDI.slang  ReflectTypes.cs.slang  Resampling.slang  Reservoir.slang  SpatialResampling.cs.slang  TemporalResampling.cs.slang
Source/RenderPasses/: CMakeLists.txt
Source/RenderPasses/PathTracer/: CMakeLists.txt  GeneratePaths.cs.slang  Params.slang  PathState.slang  PathTracer.cpp  PathTracer.h  PathTracer.slang  ResolvePass.cs.slang  TracePass.rt.slang
Source/RenderPasses/ReSTIRGDIPass/: CMakeLists.txt  FinalShading.cs.slang  ReSTIRGDI.h  ReSTIRGDIPass.cpp  ReSTIRGDIPass.h
Source/Tools/ImageCompare/: ImageCompare.cpp
scripts/: PathTracerReSTIRGDI.py  RESTIRGDI.py
